salesforce/force-app/main/default/objects/Material_Type__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false, this material/service type is hidden from the intake dropdown without deleting the record.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>