salesforce/force-app/main/default/objects/Material_Type__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Sort order within its Kind (Material or Service) in the dropdown.</description>
    <label>Display Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>