salesforce/force-app/main/default/objects/Material_Type__mdt/fields/Domains__c.field-meta.xml
<CustomField>
    <fullName>Domains__c</fullName>
    <description>Comma-separated compliance domain keys this material/service guarantees (e.g. &quot;conflict,material,trade&quot;) — must match the domain slugs used by the Python RAG corpus (quality, conflict, material, cyber, trade, finance, general) and Compliance_Domain__mdt.Domain_Key__c. Sent to /scope as part of ScopeRequest so the engine no longer needs its own hardcoded material-to-domain dict.</description>
    <label>Domains</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>