salesforce/force-app/main/default/objects/Material_Type__mdt/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <description>Whether this record populates the &quot;Raw material type&quot; dropdown or the &quot;Service category&quot; dropdown on intake — one object covers both lists.</description>
    <label>Kind</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Material</fullName>
                <default>true</default>
                <label>Material</label>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>