salesforce/force-app/main/default/objects/Material_Type__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Display text shown in the dropdown.</description>
    <label>Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>