salesforce/force-app/main/default/objects/Material_Type__mdt/fields/Value_Key__c.field-meta.xml
<CustomField>
    <fullName>Value_Key__c</fullName>
    <description>Stable value sent to ScopeService/ScopeRequest.materialType (or serviceCategory) — this is what /scope compares in its request payload. Lowercase, matches the value this record&apos;s Domains__c mapping applies to.</description>
    <label>Value Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>